--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
+amqp==2.6.1
 aniso8601==9.0.1
+billiard==3.6.4.0
+blinker==1.4
+celery==4.4.7
 certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
 connection==2021.1.5
 Flask==1.1.2
+Flask-Mail==0.9.1
 flask-marshmallow==0.14.0
 Flask-RESTful==0.3.8
 Flask-SQLAlchemy==2.5.1
@@ -12,6 +17,7 @@ idna==2.10
 importlib-metadata==3.10.0
 itsdangerous==1.1.0
 Jinja2==2.11.3
+kombu==4.6.11
 MarkupSafe==1.1.1
 marshmallow==3.11.1
 marshmallow-sqlalchemy==0.24.2
@@ -21,5 +27,6 @@ six==1.15.0
 SQLAlchemy==1.4.5
 typing-extensions==3.7.4.3
 urllib3==1.26.4
+vine==1.3.0
 Werkzeug==1.0.1
 zipp==3.4.1
